[gd_scene load_steps=41 format=2]

[ext_resource path="res://assets/game/light.png" type="Texture" id=1]
[ext_resource path="res://assets/game/camp.png" type="Texture" id=2]
[ext_resource path="res://assets/game/camp1.png" type="Texture" id=3]
[ext_resource path="res://assets/game/camp0.png" type="Texture" id=4]
[ext_resource path="res://sounds/fire1.ogg" type="AudioStream" id=5]
[ext_resource path="res://sounds/pop.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/book.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/chop.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/Camp.gd" type="Script" id=9]
[ext_resource path="res://sounds/crack.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/interface/heart.png" type="Texture" id=11]
[ext_resource path="res://sounds/fx/ah.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/fireOut.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/game/upgrade.png" type="Texture" id=14]

[sub_resource type="CircleShape2D" id=19]
radius = 8.0

[sub_resource type="Curve" id=7]
min_value = -1.0
_data = [ Vector2( 0, 0.981818 ), 0.0, 0.0, 0, 0, Vector2( 0.646739, 0.847727 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=38]
curve = SubResource( 7 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.674033, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=39]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 71.47
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_curve = SubResource( 39 )
hue_variation = 0.22
hue_variation_curve = SubResource( 38 )

[sub_resource type="Curve" id=37]
min_value = -1.0
_data = [ Vector2( 0, 0.981818 ), 0.0, 0.0, 0, 0, Vector2( 0.646739, 0.847727 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 37 )

[sub_resource type="CurveTexture" id=17]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=18]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 115.42
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 34.31
scale = 2.0
scale_curve = SubResource( 17 )
hue_variation = 0.22
hue_variation_curve = SubResource( 8 )

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.310559 )
colors = PoolColorArray( 0.199219, 0.199219, 0.199219, 1, 0.352941, 0.352941, 0.352941, 0.533333 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.347826, 0.947727 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=11]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 7.94
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_curve = SubResource( 14 )
color_ramp = SubResource( 10 )

[sub_resource type="Curve" id=20]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 124.364 ), 0.0, 0.0, 0, 0, Vector2( 0.259669, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.513812, 0.818176 ), 0.0, 0.0, 0, 0, Vector2( 0.734807, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.818176 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 20 )

[sub_resource type="Curve" id=21]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.756906, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=22]
curve = SubResource( 21 )

[sub_resource type="ParticlesMaterial" id=23]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 45.49
initial_velocity_random = 0.27
angular_velocity_curve = SubResource( 3 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 83.33
scale = 4.0
scale_curve = SubResource( 22 )
color = Color( 0.376471, 0.262745, 0.317647, 1 )
hue_variation = 0.05
hue_variation_random = 1.0

[sub_resource type="Curve" id=25]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.5, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=26]
curve = SubResource( 25 )

[sub_resource type="ParticlesMaterial" id=27]
emission_shape = 1
emission_sphere_radius = 32.0
flag_disable_z = true
gravity = Vector3( 0, -10, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 26 )

[sub_resource type="Animation" id=16]
resource_name = "default"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25, 0.35, 0.45, 0.55, 0.65, 0.75, 0.85 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1 ), Vector2( 1, 1 ), Vector2( 0.95, 0.95 ), Vector2( 1, 1 ), Vector2( 1.01, 1 ), Vector2( 1, 1.05 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.05, 1 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "default"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Camp:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camp0:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camp1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer2D_Pop:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Particles2D2:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Particles2D:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AudioStreamPlayer2D_Fire:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("AudioStreamPlayer2D_Light:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Light2D:energy")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.75 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("AudioStreamPlayer2D_Pop:pitch_scale")
tracks/9/interp = 0
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.1, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0.5, 0.6, 0.7 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("AudioStreamPlayer2D_Place:playing")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Particles2D_Sparks:emitting")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/12/type = "method"
tracks/12/path = NodePath("Particles2D_Sparks")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/13/type = "value"
tracks/13/path = NodePath(".:enabled")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="CircleShape2D" id=24]
radius = 40.0

[node name="Camp" type="Area2D" groups=["damagable"]]
script = ExtResource( 9 )
enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 19 )

[node name="Camp" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, -1 )
emitting = false
amount = 10
process_material = SubResource( 6 )

[node name="Particles2D_Sparks" type="Particles2D" parent="."]
position = Vector2( 0, -1 )
emitting = false
amount = 20
lifetime = 2.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 18 )

[node name="Particles2D2" type="Particles2D" parent="."]
emitting = false
amount = 40
lifetime = 10.0
process_material = SubResource( 11 )

[node name="Particles2D_Explode" type="Particles2D" parent="."]
emitting = false
lifetime = 5.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 23 )

[node name="Particles2D_Health" type="Particles2D" parent="."]
z_index = 10
emitting = false
lifetime = 2.0
process_material = SubResource( 27 )
texture = ExtResource( 11 )

[node name="Particles2D_Upgrade" type="Particles2D" parent="."]
z_index = 10
emitting = false
lifetime = 2.0
process_material = SubResource( 27 )
texture = ExtResource( 14 )

[node name="Camp0" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="Camp1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 1 )
color = Color( 0.898039, 0.901961, 0.239216, 1 )
energy = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Light2D"]
autoplay = "default"
anims/default = SubResource( 16 )

[node name="AudioStreamPlayer2D_Fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
max_distance = 100.0

[node name="AudioStreamPlayer2D_Place" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="AudioStreamPlayer2D_Pop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
pitch_scale = 0.5

[node name="AudioStreamPlayer2D_Light" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
pitch_scale = 1.8

[node name="AudioStreamPlayer2D_Break" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
pitch_scale = 1.8

[node name="AudioStreamPlayer2D_Break2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = 5.0
pitch_scale = 1.8

[node name="AudioStreamPlayer2D_Ahhh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 15 )

[node name="Tween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 24 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
